BTWCT-1151: Fix Alignment of Inline Search Icon => Use specific top and right values that are in the ticket

--- a/waters-aem-frontend/src/styles/filters.scss
+++ b/waters-aem-frontend/src/styles/filters.scss
@@ -155,11 +155,16 @@
                 z-index: 1;
                 position: absolute;
                 top: 13px;
-                right: 10px;
+                right: 14px;
                 width: 25px;
                 height: 25px;
                 .st0 {
                     stroke: $color-icon;
+                }
+
+                @include mobile {
+                    top: 15px;
+                    right: 16px;
                 }
             }
 
